# Teledyne-GigE-CameraModule

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build_camera.ps1
docs/: README.md
docs/cpp/: CMakeLists.txt  camera_analyzer.cpp
docs/examples/cpp/: CMakeLists.txt  README.md  camera_control.cpp  gige_camera.h  simple_grab.cpp
docs/examples/python/: generate_proto.bat  gige_camera.py  simple_grab.py
docs/python/: camera_client.py  generate_proto.bat  requirements.txt
include/: GrpcServer.h  SharedMemoryManager.h  SpinnakerCameraManager.h
modules/liveview/: CMakeLists.txt
modules/liveview/include/: CameraFeed.h  LiveViewApp.h
modules/liveview/src/: CameraFeed.cpp  LiveViewApp.cpp  main.cpp
modules/rtsp-server/: CMakeLists.txt  README.md  build.ps1
modules/rtsp-server/include/: H264Encoder.h  RtspServer.h
modules/rtsp-server/src/: FrameGrabber.cpp  H264Encoder.cpp  RtspServer.cpp  main.cpp
modules/rtsp-streamer/: CMakeLists.txt
modules/rtsp-streamer/include/: FrameGrabber.h  H264Encoder.h  RtpPusher.h  RtspServer.h
modules/rtsp-streamer/src/: FrameGrabber.cpp  H264Encoder.cpp  RtpPusher.cpp  RtspServer.cpp  main.cpp
proto/: camera_service.proto
src/: GrpcServer.cpp  SharedMemoryManager.cpp  SpinnakerCameraManager.cpp  debug_client.cpp  main.cpp
